--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Jquery-levelup</h1>
+      <h1 class="project-name">jquery-levelup</h1>
       <h2 class="project-tagline">Simple +1/-1 Animation similar to point accumulation in a video game</h2>
       <a href="https://github.com/pstrinkle/jquery-levelup" class="btn">View on GitHub</a>
       <a href="https://github.com/pstrinkle/jquery-levelup/zipball/master" class="btn">Download .zip</a>
@@ -104,6 +104,9 @@
               });
           });
       </script>
+
+      <h3>License</h3>
+      <p><a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a></p>
 
       <footer class="site-footer">
         <!-- <span class="site-footer-owner"><a href="https://github.com/pstrinkle/jquery-levelup">Jquery-levelup</a> is maintained by <a href="https://github.com/pstrinkle">pstrinkle</a>.</span> -->
