trying to style the buttons nicely without disrupting with bootstrap

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       </pre>
       
       <h3>Usage</h3>
+      <div>
       <table class="table">
         <thead>
           <tr>
@@ -64,7 +65,28 @@
         <tbody>
           <tr>
             <td>start</td>
-            <td>Start value for span. <br/>Default:<pre>0</pre></td>
+            <td>Start value for span. Default:<code>0</code></td>
+          </tr>
+        </tbody>
+      </table>
+      </div>
+      <br />
+      
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Methods</th>
+            <th>Param</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><code>'increment'</code></td>
+            <td>integer by which to increment</td>
+          </tr>
+          <tr>
+            <td><code>'decrement'</code></td>
+            <td>absolute value of integer by which to decrement (always positive)</td>
           </tr>
         </tbody>
       </table>
@@ -72,7 +94,14 @@
       <h3>Demos</h3>
       <p>I will put a few demos here.</p>
       <h4>Basic Demo</h4>
-      <p><span id='basic_1'></span> - <button id='incrementBtn'>increment</button> - <button id='decrementBtn'>decrement</button></p>
+      <div class="btn-area">
+        <p>
+          <span id='basic_1'></span> - 
+          <button id='incrementBtn' class="btn2">increment</button> - 
+          <button id='decrementBtn' class="btn2">decrement</button>
+        </p>
+      </div>
+      <pre class="prettyprint lang-js">$('#basic_1').levelup('increment', 1);</pre>
       <script>
           $(function() {
               $('#basic_1').levelup({'start' : 0});
@@ -89,7 +118,16 @@
       </script>
 
       <h4>Increment by bigger value</h4>
-      <p><span id='basic_2'></span> - <button id='incrementBtn_2'>increment</button> - <button id='decrementBtn_2'>decrement</button></p>
+      <div class="btn-area">
+        <p>
+          <span id='basic_2'></span> - 
+          <button id='incrementBtn_2' class="btn2">increment</button> - 
+          <button id='decrementBtn_2' class="btn2">decrement</button>
+        </p>
+      </div>
+      <pre class="prettyprint lang-js">
+$('#basic_2').levelup('increment', 10);
+$('#basic_2').levelup('decrement', 7);</pre>
       <script>
           $(function() {
               $('#basic_2').levelup({'start' : 0});
