--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@
             <td>Start value for span.</td>
           </tr>
           <tr>
-            <td><i>incrementer</i>.bold</td>
+            <td><i>incrementer|decrementer</i>.bold</td>
             <td>boolean</td>
             <td>true</td>
-            <td>Whether the incrementer is bold</td>
+            <td>Whether the incrementer|decrementer is bold</td>
           </tr>
           <tr>
-            <td><i>decrementer</i>.bold</td>
-            <td>boolean</td>
-            <td>true</td>
-            <td>Whether the decrementer is bold</td>
+            <td><i>incrementer|decrementer</i>.color</td>
+            <td>CSS color string</td>
+            <td>null</td>
+            <td>Change the incrementer|decrementer's text color</td>
           </tr>
         </tbody>
       </table>
@@ -184,6 +184,29 @@ $('#basic_3').levelup('decrement', 7);</pre>
               });
               $('#decrementBtn_3').on('click', function(event) {
                   $('#basic_3').levelup('decrement', 7);
+                  $(this).blur();
+              });
+          });
+      </script>
+
+      <h4>Controlling the color</h4>
+      <div class="btn-area">
+        <p>
+          <span id='basic_4'></span> - 
+          <button id='incrementBtn_4' class="btn2">increment</button>
+        </p>
+      </div>
+      <pre class="prettyprint lang-js">
+$('#basic_4').levelup({'start' : 0, 'incrementer' : {'color' : 'red'}});
+$('#basic_4').levelup('increment', 10);
+</pre>
+      <script>
+          $(function() {
+              $('#basic_4').levelup({'start' : 0,
+                                     'incrementer' : {'color' : 'red'}});
+
+              $('#incrementBtn_4').on('click', function(event) {
+                  $('#basic_4').levelup('increment', 10);
                   $(this).blur();
               });
           });
