reset parameters documented

--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
             <td><code>'decrement'</code></td>
             <td>absolute value of integer by which to decrement (always positive)</td>
           </tr>
+          <tr>
+            <td><code>'reset'</code></td>
+            <td></td>
+          </tr>
         </tbody>
       </table>
       
