first updates during refactor

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <p>Basically just include the file.
       <pre class="prettyprint lang-html">
 &lt;script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"&gt;&lt;/script&gt;
-&lt;script src="/libs/jquery-levelup/levelup.js"&gt;&lt;/script&gt;
+&lt;script src="/libs/jquery-levelup/jquery.levelup.min.js"&gt;&lt;/script&gt;
 
 &lt;span&gt;counter &lt;span style="font-weight: bold;" id='the_cnt'&gt;0&lt;/span&gt;&lt;/span&gt;
 
