--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
             <td><code>'reset'</code></td>
             <td></td>
           </tr>
+          <tr>
+            <td><code>'get'</code></td>
+            <td></td>
+          </tr>
         </tbody>
       </table>
       
